# syscalls

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
src/: args.rs  args7.rs  ffi.rs  helper.rs  lib.rs  macros.rs  map.rs  nr.rs  raw.rs  set.rs  syscall.c
src/arch/: aarch64.rs  arm.rs  loongarch64.rs  macros.rs  mips.rs  mips64.rs  mod.rs  powerpc.rs  powerpc64.rs  riscv32.rs  riscv64.rs  s390x.rs  sparc.rs  sparc64.rs  x86.rs  x86_64.rs
src/arch/arm/: mod.rs  syscall.c  syscall.rs  syscalls.rs
src/arch/mips/: mod.rs  syscall.c  syscall.rs  syscalls.rs
src/arch/mips64/: mod.rs  syscall.c  syscall.rs  syscalls.rs
src/arch/powerpc/: mod.rs  syscall.c  syscall.rs  syscalls.rs
src/arch/powerpc64/: mod.rs  syscall.c  syscall.rs  syscalls.rs
src/arch/s390x/: mod.rs  syscall.c  syscall.rs  syscalls.rs
src/arch/sparc/: mod.rs  syscalls.rs
src/arch/sparc64/: mod.rs  syscalls.rs
src/arch/x86/: mod.rs  syscall.c  syscall.rs  syscalls.rs
src/arch/x86_64/: mod.rs  syscall.c  syscall.rs  syscalls.rs
src/errno/: generated.rs  mod.rs
src/syscall/: aarch64.rs  arm.rs  arm_thumb.rs  loongarch64.rs  mips.rs  mips64.rs  mod.rs  powerpc.rs  powerpc64.rs  riscv32.rs  riscv64.rs  s390x.rs  x86.rs  x86_64.rs
syscalls-gen/: Cargo.toml
syscalls-gen/src/: errors.rs  main.rs  tables.rs
sysnum/: Cargo.toml
sysnum/src/: lib.rs
tests/: test_syscall.rs
