[package]
name = "syscalls"
version = "0.6.4"
authors = ["Jason White <rust@jasonwhite.io>", "Baojun Wang <wangbj@gmail.com>"]
edition = "2018"
license = "BSD-2-Clause"
description = """
A list of Linux system calls.
"""
keywords = ["syscall", "linux"]
readme = "README.md"
repository = "https://github.com/jasonwhite/syscalls"
homepage = "https://github.com/jasonwhite/syscalls"
documentation = "https://docs.rs/syscalls"

[features]
default = ["std", "with-serde"]

# Enables all extra features.
full = ["std", "with-serde", "all"]

# Enables usage of libstd.
std = []

# Includes the syscall tables for all architectures.
all = [
    "arm", "mips", "mips64", "powerpc", "powerpc64", "s390x", "sparc",
    "sparc64", "x86", "x86_64"
]

# Enable syscall tables for individual architectures.
arm = []
mips = []
mips64 = []
powerpc = []
powerpc64 = []
s390x = []
sparc = []
sparc64 = []
x86 = []
x86_64 = []

# Enables Serialize/Deserialize impls.
with-serde = ["serde", "serde_repr"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_repr = { version = "0.1", optional = true }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
libc = "0.2"

[workspace]
members = [
    "syscalls-gen",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
