[package]
name = "syscalls-gen"
publish = false
version = "0.0.0"
authors = ["Baojun Wang <wangbj@gmail.com>", "Jason White <rust@jasonwhite.io>"]
edition = "2018"
license = "BSD-2-Clause"
description = """
Generates a syscalls table from Linux source code.
"""
keywords = ["syscall", "linux"]
readme = "README.md"
repository = "https://github.com/jasonwhite/syscalls"
homepage = "https://github.com/jasonwhite/syscalls"
documentation = "https://docs.rs/syscalls"

[dependencies]
tempfile = "3.0"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
color-eyre = "0.5"
lazy_static = "1"
regex = "1"
